# asterisk-cartographer

./: CMakeLists.txt  README.md  display.cpp  display.hpp  main.cpp  main.hpp  parse.cpp  parse.hpp
artifact/map_0/: maps.txt  objects.txt
artifact/map_1/: maps.txt  objects.txt
artifact/map_2/: maps.txt  objects.txt  quests.txt
artifact/map_3/: maps.txt  objects.txt  quests.txt
artifact/map_3/quest/: 0.txt
doc/: alternategdformat.md
